--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Demo</title>
+    <title>Flash Card</title>
+    <link rel="stylesheet" href="./src/css/global.css">
   </head>
   <body>
     <div id="app"></div>
