--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Flash Card</title>
+    <title>Flashcards</title>
     <link rel="stylesheet" href="./src/css/global.css">
   </head>
   <body>
