--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Flashcards</title>
-    <link rel="stylesheet" href="./src/css/global.css">
+    <link rel="stylesheet" href="/src/css/global.css">
   </head>
   <body>
     <div id="app"></div>
