--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><meta charset="UTF-8"><title>Flashcards</title><script defer="defer" src="main.js"></script></head><body><div id="app"></div><script src="/main.js"></script></body></html>
+<!doctype html><html><head><meta charset="UTF-8"><title>Flashcards</title><script defer="defer" src="main.js"></script></head><body><div id="app"></div></body></html>
